--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "dependencies": {
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-scripts": "3.2.0"
+    "react-scripts": "^3.3.1"
   },
   "scripts": {
     "start": "webpack --mode development",
@@ -43,10 +43,14 @@
     "css-loader": "^3.2.0",
     "eslint": "^6.7.0",
     "eslint-config-airbnb": "^18.0.1",
+    "eslint-plugin-codeceptjs": "^1.2.0",
+    "eslint-plugin-html": "^6.0.0",
     "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-jest": "^23.7.0",
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-react": "^7.16.0",
     "eslint-plugin-react-hooks": "^1.7.0",
+    "eslint-plugin-security": "^1.4.0",
     "html-webpack-plugin": "^3.2.0",
     "svg-inline-loader": "^0.8.0",
     "webpack": "^4.41.2",
